--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,7 +15,7 @@ layout: default
   <nav class="about">
       <p><a href="/o-podcascie">O podcaście</a></p>
       <p><b>Słuchaj na:</b></p>
-      <a>YouTube</a>
+      <a href="https://www.youtube.com/channel/UC9_1emyCJi4YhLQWOAEIaMQ/videos">YouTube</a>
       <a>Apple Podcasts</a>
       <a>Google Podcast</a>
       <a>Spotify</a>
