--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,7 +18,7 @@ layout: default
       <a href="https://www.youtube.com/channel/UC9_1emyCJi4YhLQWOAEIaMQ/videos">YouTube</a>
       <a>Apple Podcasts</a>
       <a>Google Podcast</a>
-      <a>Spotify</a>
+      <a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J">Spotify</a>
       <a href="https://anchor.fm/patoarchitekciio">Anchor</a>
   </nav>
   <footer>
