--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -16,8 +16,8 @@ layout: default
       <p><a href="/o-podcascie">O podcaście</a></p>
       <p><b>Słuchaj na:</b></p>
       <a href="https://www.youtube.com/channel/UC9_1emyCJi4YhLQWOAEIaMQ/videos">YouTube</a>
-      <a>Apple Podcasts</a>
-      <a>Google Podcast</a>
+      <!--<a>Apple Podcasts</a>
+      <a>Google Podcast</a>-->
       <a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J">Spotify</a>
       <a href="https://anchor.fm/patoarchitekciio">Anchor</a>
   </nav>
