--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -20,6 +20,7 @@ layout: default
       <a>Google Podcast</a>-->
       <a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J">Spotify</a>
       <a href="https://anchor.fm/patoarchitekciio">Anchor</a>
+      <a href="https://pca.st/16k1">Pocket Casts</a>
   </nav>
   <footer>
     <section class="contact">
