--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -127,12 +127,11 @@
         <div class="row pt-5 mt-5 text-center">
             <div class="col-md-12">
                 <p>
-                    Copyright &copy;c 2020 All rights reserved Łukasz Kałużny & Szymon Warda | Szablon stworzony z
+                    Copyright &copy; 2020 Wszelkie prawa zastrzeżone Łukasz Kałużny & Szymon Warda | Szablon stworzony z
                     <i class="icon-heart-o" aria-hidden="true"></i> przez <a href="https://colorlib.com"
                         target="_blank">Colorlib</a>
                 </p>
             </div>
-
         </div>
     </div>
 </footer>
