--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,19 +1,23 @@
-<div class="container">
-  <nav class="pagination" role="pagination">
-    <ul>
-      {% if paginator.previous_page %}
-        {% if paginator.previous_page == 1 %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-        {% else %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/page/{{ paginator.previous_page }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-        {% endif %}
-      {% endif %}
-
-      <p><span class="page-number">Strona {{paginator.page}} z {{paginator.total_pages}}</span></p>
-
-      {% if paginator.next_page %}
-      <p><a class="older-posts" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-      {% endif %}
-    </ul>
-  </nav>
+<div class="container" data-aos="fade-up">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <div class="site-block-27">
+        <ul>
+          {% if paginator.previous_page %}
+          <li><a href="{{ paginator.previous_page_path | relative_url }}">&lt;</a></li>
+          {% endif %}
+          {% for page in (1..paginator.total_pages) %}
+          {% if page == paginator.page %}
+          <li class="active"><a href="#">{{ page }}</a></li>
+          {% else %}
+          <li><a href="{{ site.paginate_path | relative_url | replace: ':num', page }}">{{ page }}</a></li>
+          {% endif %}
+          {% endfor %}
+          {% if paginator.next_page %}
+          <li><a href="{{ paginator.next_page_path | relative_url }}">&gt;</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
