--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,41 +10,27 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-3" data-aos="fade-down">
-                <h1><a href="index.html" class="text-white h2">Patoarchitekci</a></h1>
+                <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
             </div>
             <div class="col-9" data-aos="fade-down">
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
                     <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
                             class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
                     </div>
-
                     <ul class="site-menu js-clone-nav d-none">
-                        <li class="has-children">
-                            <a href="index.html">Home</a>
-                            <ul class="dropdown arrow-top">
-                                <li><a href="#">Menu One</a></li>
-                                <li><a href="#">Menu Two</a></li>
-                                <li><a href="#">Menu Three</a></li>
-                                <li class="has-children">
-                                    <a href="#">Sub Menu</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Menu One</a></li>
-                                        <li><a href="#">Menu Two</a></li>
-                                        <li><a href="#">Menu Three</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-children">
-                            <a href="#">Dropdown</a>
-                            <ul class="dropdown arrow-top">
-                                <li><a href="#">Menu One</a></li>
-                                <li><a href="#">Menu Two</a></li>
-                                <li><a href="#">Menu Three</a></li>
-                            </ul>
-                        </li>
-                        <li class="active"><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        {% for item in site.menu %}
+                        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                        {% endfor %}
+                        <li><a href="https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?l=pl"><img
+                                    src="/assets/images/podcast-apple.svg" width="100%"></a></li>
+                        <li><a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"><img
+                                    src="/assets/images/podcast-spotify.png" width="100%"></a></li>
+                        <li><a
+                                href="https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz"><img
+                                    src="/assets/images/podcast-google.svg" width="100%"></a></li>
+                        <li><a
+                                href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
+                                    src="/assets/images/podcast-youtube.png" width="100%"></a></li>
                     </ul>
                 </nav>
             </div>
