--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,126 +3,79 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="mb-5">
-                    <h3 class="footer-heading mb-4">About Podca</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe pariatur reprehenderit vero
-                        atque,
-                        consequatur id ratione, et non dignissimos culpa? Ut veritatis, quos illum totam quis
-                        blanditiis, minima
-                        minus odio!</p>
+                    <h3 class="footer-heading mb-4">Czym są Patoarchitekci?</h3>
+                    <p>{{ site.about-author }}</p>
                 </div>
-
                 <div class="mb-5">
-                    <h3 class="footer-heading mb-4">Recent Podcast</h3>
+                    <h3 class="footer-heading mb-4">Najnowsze odcinki</h3>
                     <div class="block-25">
                         <ul class="list-unstyled">
+                            {% for post in site.posts limit:3 %}
                             <li class="mb-3">
-                                <a href="#" class="d-flex">
+                                <a href="{{post.url | prepend: site.baseurl}}" class="d-flex">
                                     <figure class="image mr-4">
-                                        <img src="/assets/images/img_1.jpg" alt="" class="img-fluid">
+                                        <img src="/assets/images/logo-default.jpg" alt="" class="img-fluid">
                                     </figure>
                                     <div class="text">
-                                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur
-                                            elit</h3>
+                                        <h3 class="heading font-weight-light">{{post.title}}</h3>
                                     </div>
                                 </a>
                             </li>
-                            <li class="mb-3">
-                                <a href="#" class="d-flex">
-                                    <figure class="image mr-4">
-                                        <img src="/assets/images/img_1.jpg" alt="" class="img-fluid">
-                                    </figure>
-                                    <div class="text">
-                                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur
-                                            elit</h3>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="mb-3">
-                                <a href="#" class="d-flex">
-                                    <figure class="image mr-4">
-                                        <img src="/assets/images/img_1.jpg" alt="" class="img-fluid">
-                                    </figure>
-                                    <div class="text">
-                                        <h3 class="heading font-weight-light">Lorem ipsum dolor sit amet consectetur
-                                            elit</h3>
-                                    </div>
-                                </a>
-                            </li>
+                            {% endfor %}
                         </ul>
                     </div>
                 </div>
-
             </div>
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="row mb-5">
                     <div class="col-md-12">
-                        <h3 class="footer-heading mb-4">Quick Menu</h3>
+                        <h3 class="footer-heading mb-4">Menu</h3>
                     </div>
                     <div class="col-md-6 col-lg-6">
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Matches</a></li>
-                            <li><a href="#">News</a></li>
-                            <li><a href="#">Team</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-6">
-                        <ul class="list-unstyled">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Membership</a></li>
+                            {% for item in site.menu %}
+                            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                            {% endfor %}
                         </ul>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="footer-heading mb-4">Follow Us</h3>
-
+                        <h3 class="footer-heading mb-4">Śledź nas</h3>
                         <div>
-                            <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                            {% if site.social-facebook %}
+                            <a href="{{ site.social-facebook }}" class="pl-0 pr-3"><span
+                                    class="icon-facebook"></span></a>
+                            {% endif %}
+                            {% if site.social-twitter %}
+                            <a href="https://twitter.com/{{ site.social-twitter }}" class="pl-3 pr-3"><span
+                                    class="icon-twitter"></span></a>
+                            {% endif %}
+                            {% if site.social-github %}
+                            <a href="https://github.com/{{ site.social-github }}" class="pl-3 pr-3"><span
+                                    class="icon-github"></span></a>
+                            {% endif %}
+                            {% if site.social-linkedin %}
+                            <a href="{{ site.social-linkedin }}" class="pl-3 pr-3"><span
+                                    class="icon-linkedin"></span></a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
-
             </div>
-
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="mb-5">
-                    <h3 class="footer-heading mb-4">Watch Video</h3>
-
-                    <div class="block-16">
-                        <figure>
-                            <img src="/assets/images/img_1.jpg" alt="Image placeholder" class="img-fluid rounded">
-                            <a href="https://vimeo.com/channels/staffpicks/93951774"
-                                class="play-button popup-vimeo"><span class="icon-play"></span></a>
-                        </figure>
-                    </div>
-
-                </div>
-
-                <div class="mb-5">
-                    <h3 class="footer-heading mb-2">Subscribe Newsletter</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit minima minus odio.</p>
-
+                    <h3 class="footer-heading mb-2">Bądź na bieżąco!</h3>
+                    <p>Zapisz się do newslettera Patoarchiteków i bądź na bieżąco z wszystkimi odcinkami oraz uzyskaj
+                        dostęp do dodatkowych materiałów!</p>
                     <form action="#" method="post">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control border-secondary text-white bg-transparent"
-                                placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button" id="button-addon2">Send</button>
-                            </div>
+                            <button class="btn btn-primary" type="button" id="button-addon2"
+                                onclick="ml_account('webforms', '1767260', 'h9i8j2', 'show')">Zapisz się!</button>
                         </div>
                     </form>
-
                 </div>
-
             </div>
-
         </div>
         <div class="row pt-5 mt-5 text-center">
             <div class="col-md-12">
