--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,13 @@
 
 <body>
   <div class="site-wrap">
+    {% include menu.html %}
     {{ content }}
     {% include footer.html %}
   </div>
   {% include footer_js.html %}
   {% include analytics.html %}
+  {% include mailerlite.html %}
 </body>
 
 </html>
