--- a/_includes/footer_js.html
+++ b/_includes/footer_js.html
@@ -8,27 +8,5 @@
 <script src="/assets/js/jquery.countdown.min.js"></script>
 <script src="/assets/js/jquery.magnific-popup.min.js"></script>
 <script src="/assets/js/aos.js"></script>
-
-<script src="/assets/js/mediaelement-and-player.min.js"></script>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
-
-        for (var i = 0; i < total; i++) {
-            new MediaElementPlayer(mediaElements[i], {
-                pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
-                shimScriptAccess: 'always',
-                success: function () {
-                    var target = document.body.querySelectorAll('.player'), targetTotal = target.length;
-                    for (var j = 0; j < targetTotal; j++) {
-                        target[j].style.visibility = 'visible';
-                    }
-                }
-            });
-        }
-    });
-</script>
-
-
 <script src="/assets/js/main.js"></script>
+<script async src="https://widget.spreaker.com/widgets.js"></script>
