--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,103 +1,37 @@
 ---
 layout: default
 ---
-
-
-  <div class="site-mobile-menu">
-    <div class="site-mobile-menu-header">
-      <div class="site-mobile-menu-close mt-3">
-        <span class="icon-close2 js-menu-toggle"></span>
-      </div>
-    </div>
-    <div class="site-mobile-menu-body"></div>
-  </div>
-
-
-  <header class="site-navbar py-4 absolute transparent" role="banner">
-
-    <div class="container">
-      <div class="row align-items-center">
-
-
-        <div class="col-3" data-aos="fade-down">
-          <h1><a href="index.html" class="text-white h2">Patoarchitekci</a></h1>
-        </div>
-        <div class="col-9" data-aos="fade-down">
-          <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
-
-
-
-            <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
-                class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
-
-            <ul class="site-menu js-clone-nav d-none">
-              <li class="has-children">
-                <a href="index.html">Home</a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="#">Menu One</a></li>
-                  <li><a href="#">Menu Two</a></li>
-                  <li><a href="#">Menu Three</a></li>
-                  <li class="has-children">
-                    <a href="#">Sub Menu</a>
-                    <ul class="dropdown">
-                      <li><a href="#">Menu One</a></li>
-                      <li><a href="#">Menu Two</a></li>
-                      <li><a href="#">Menu Three</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li class="has-children">
-                <a href="#">Dropdown</a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="#">Menu One</a></li>
-                  <li><a href="#">Menu Two</a></li>
-                  <li><a href="#">Menu Three</a></li>
-                </ul>
-              </li>
-              <li class="active"><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-
-
-        </div>
-
-      </div>
-    </div>
-
-  </header>
-
-  <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(/assets/images/hero_bg_2.jpg);"
-    data-aos="fade" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row align-items-center justify-content-center text-center">
-        <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-          <h2 class="text-white font-weight-light mb-2 display-4">
-            {{ page.title }}
-          </h2>
-          <div class="text-white mb-3"><span class="text-white-opacity-05"><small>{{page.date | date: '%Y, %b %d'}}</small></span></div>
-        </div>
+<div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(/assets/images/cover-default.jpg);"
+  data-aos="fade" data-stellar-background-ratio="0.5">
+  <div class="container">
+    <div class="row align-items-center justify-content-center text-center">
+      <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
+        <h2 class="text-white font-weight-light mb-2 display-4">
+          {{ page.title }}
+        </h2>
+        <div class="text-white mb-3"><span
+            class="text-white-opacity-05"><small>{{page.date | date: '%Y, %b %d'}}</small></span></div>
       </div>
     </div>
   </div>
-
-  <div class="container site-section">
-
-    <div class="player mb-5">
-      <audio id="player2" preload="none" controls style="max-width: 100%">
-        <source src="{{ page.mp3 }}" type="audio/mp3">
-      </audio>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-md-7">
-        {{content | markdownify}}
-      </div>
-    </div>
-
+</div>
+<div class="container site-section">
+  {% if page.spreaker %}
+  <div class="player mb-5">
+    <a class="spreaker-player" href="https://www.spreaker.com/episode/{{ page.spreaker }}"
+      data-resource="episode_id={{ page.spreaker }}" data-width="100%" data-height="150px" data-theme="light"
+      data-playlist="true" data-playlist-continuous="false" data-autoplay="false" data-live-autoplay="false"
+      data-chapters-image="true" data-episode-image-position="right" data-hide-logo="true" data-hide-likes="false"
+      data-hide-comments="false" data-hide-sharing="false" data-hide-download="true">Posłuchaj <b>"{{post.title}}"</b>
+      na Spreaker</a>
   </div>
-
+  {% endif %}
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      {{content | markdownify}}
+    </div>
+  </div>
+</div>
 <!-- Powiązane podcasty
   <div class="site-section bg-light">
     <div class="container">
@@ -155,8 +89,4 @@ layout: default
     </div>
   </div>
   //-->
-
-
-  
 </div>
-
