--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,9 @@ layout: default
     <div class="col-md-7">
       {{content | markdownify}}
     </div>
+    <div class="col-md-7">
+      {% include disqus.html %}
+    </div>
   </div>
 </div>
 <!-- Powiązane podcasty
