--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -30,7 +30,7 @@
                                     src="/assets/images/podcast-google.svg" width="100%"></a></li>
                         <li><a
                                 href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
-                                    src="/assets/images/podcast-youtube.png" width="100%"></a></li>
+                                    src="/assets/images/podcast-youtube.jp2" width="100%"></a></li>
                     </ul>
                 </nav>
             </div>
