--- a/_includes/footer_js.html
+++ b/_includes/footer_js.html
@@ -5,4 +5,4 @@
 <script src="/assets/js/jquery.stellar.min.js"></script>
 <script src="/assets/js/aos.js"></script>
 <script src="/assets/js/main.js"></script>
-<script async src="https://widget.spreaker.com/widgets.js"></script>
+<script defer src="https://widget.spreaker.com/widgets.js"></script>
