--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,10 +9,10 @@
 <header class="site-navbar py-4 absolute transparent" role="banner">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-3" data-aos="fade-down">
+            <div class="col-3" >
                 <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
             </div>
-            <div class="col-9" data-aos="fade-down">
+            <div class="col-9" >
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
                     <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
                             class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
