--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -7,6 +7,7 @@
     url('/assets/fonts/icomoon/fonts/icomoon.svg?10si43#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-"], [class*=" icon-"] {
