--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -10,7 +10,11 @@
           {% if page == paginator.page %}
           <li class="active"><a href="#">{{ page }}</a></li>
           {% else %}
+          {% if page == 1 %}
+          <li><a href="/">{{ page }}</a></li>
+          {% else %}
           <li><a href="{{ site.paginate_path | relative_url | replace: ':num', page }}">{{ page }}</a></li>
+          {% endif %}
           {% endif %}
           {% endfor %}
           {% if paginator.next_page %}
@@ -19,5 +23,5 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> 
 </div>
