--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -4,21 +4,21 @@
       <div class="site-block-27">
         <ul>
           {% if paginator.previous_page %}
-          <li><a href="{{ paginator.previous_page_path | relative_url }}">&lt;</a></li>
+          <li><a href="{{ paginator.previous_page_path | relative_url }}#content">&lt;</a></li>
           {% endif %}
           {% for page in (1..paginator.total_pages) %}
           {% if page == paginator.page %}
-          <li class="active"><a href="#">{{ page }}</a></li>
+          <li class="active"><a href="#content">{{ page }}</a></li>
           {% else %}
           {% if page == 1 %}
-          <li><a href="/">{{ page }}</a></li>
+          <li><a href="/#content">{{ page }}</a></li>
           {% else %}
-          <li><a href="{{ site.paginate_path | relative_url | replace: ':num', page }}">{{ page }}</a></li>
+          <li><a href="{{ site.paginate_path | relative_url | replace: ':num', page }}#content">{{ page }}</a></li>
           {% endif %}
           {% endif %}
           {% endfor %}
           {% if paginator.next_page %}
-          <li><a href="{{ paginator.next_page_path | relative_url }}">&gt;</a></li>
+          <li><a href="{{ paginator.next_page_path | relative_url }}#content">&gt;</a></li>
           {% endif %}
         </ul>
       </div>
