--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,10 +9,10 @@
 <header class="site-navbar py-4 absolute transparent" role="banner">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-3" >
+            <div class="col-3">
                 <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
             </div>
-            <div class="col-9" >
+            <div class="col-9">
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
                     <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
                             class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
@@ -31,6 +31,9 @@
                         <li><a
                                 href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
                                     src="/assets/images/podcast-youtube.png" width="100%"></a></li>
+                        <li><a
+                                href="https://www.spreaker.com/show/4215515/episodes/feed"><img
+                                    src="/assets/images/podcast-rss.png" width="100%"></a></li>
                     </ul>
                 </nav>
             </div>
