google tag manager

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,12 +7,22 @@
   gtag('config', 'UA-142509712-1');
 </script>
 <!-- End Analytics -->
+<!-- Google Tag Manager -->
+<script>(function (w, d, s, l, i) {
+    w[l] = w[l] || []; w[l].push({
+      'gtm.start':
+        new Date().getTime(), event: 'gtm.js'
+    }); var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-P922WNC');</script>
+<!-- End Google Tag Manager -->
 <!-- Facebook Pixel Code -->
 <script>
   !function (f, b, e, v, n, t, s) {
     if (f.fbq) return; n = f.fbq = function () {
       n.callMethod ?
-      n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
     };
     if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
     n.queue = []; t = b.createElement(e); t.async = !0;
@@ -20,9 +30,28 @@
     s.parentNode.insertBefore(t, s)
   }(window, document, 'script',
     'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1200620883313556');
   fbq('init', '313040722397945');
+  fbq('init', '214496003024029');
   fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=313040722397945&ev=PageView&noscript=1" /></noscript>
+<noscript>
+  <img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1200620883313556&ev=PageView&noscript=1" />
+  <img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=313040722397945&ev=PageView&noscript=1" />
+  <img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=214496003024029&ev=PageView&noscript=1" />
+</noscript>
 <!-- End Facebook Pixel Code -->
+<!-- Hotjar Tracking Code for https://patoarchitekci.io/ -->
+<script>
+  (function (h, o, t, j, a, r) {
+    h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+    h._hjSettings = { hjid: 1689979, hjsv: 6 };
+    a = o.getElementsByTagName('head')[0];
+    r = o.createElement('script'); r.async = 1;
+    r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+    a.appendChild(r);
+  })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+</script>
