--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,16 @@
 {% include head.html %}
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P922WNC" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="site-wrap">
     {% include menu.html %}
     {{ content }}
     {% include footer.html %}
   </div>
   {% include footer_js.html %}
-  {% include analytics.html %}
   {% include mailerlite.html %}
 </body>
 
