--- a/_includes/head.html
+++ b/_includes/head.html
@@ -74,15 +74,5 @@
   <link rel="stylesheet" href="/assets/css/jquery-ui.css">
   <link rel="stylesheet" href="/assets/css/aos.css">
   <link rel="stylesheet" href="/assets/css/style.css">
-  <!-- Hotjar Tracking Code for https://patoarchitekci.io/ -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-      h._hjSettings = { hjid: 1689979, hjsv: 6 };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script'); r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-  </script>
+  {% include analytics.html %}
 </head>
