--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,20 +44,20 @@
                         <h3 class="footer-heading mb-4">Śledź nas</h3>
                         <div>
                             {% if site.social-facebook %}
-                            <a href="{{ site.social-facebook }}" class="pl-0 pr-3"><span
-                                    class="icon-facebook"></span></a>
+                            <a href="{{ site.social-facebook }}" class="pl-0 pr-3"><i
+                                    class="fab fa-facebook-f"></i></span></a>
                             {% endif %}
                             {% if site.social-twitter %}
-                            <a href="https://twitter.com/{{ site.social-twitter }}" class="pl-3 pr-3"><span
-                                    class="icon-twitter"></span></a>
+                            <a href="https://twitter.com/{{ site.social-twitter }}" class="pl-3 pr-3"><i
+                                    class="fab fa-twitter"></i></a>
                             {% endif %}
                             {% if site.social-github %}
-                            <a href="https://github.com/{{ site.social-github }}" class="pl-3 pr-3"><span
-                                    class="icon-github"></span></a>
+                            <a href="https://github.com/{{ site.social-github }}" class="pl-3 pr-3"><i
+                                    class="fab fa-github"></i></a>
                             {% endif %}
                             {% if site.social-linkedin %}
-                            <a href="{{ site.social-linkedin }}" class="pl-3 pr-3"><span
-                                    class="icon-linkedin"></span></a>
+                            <a href="{{ site.social-linkedin }}" class="pl-3 pr-3"><i
+                                    class="fab fa-linkedin-in"></i></span></a>
                             {% endif %}
                         </div>
                     </div>
@@ -81,7 +81,7 @@
             <div class="col-md-12">
                 <p>
                     Copyright &copy; 2020 Wszelkie prawa zastrzeżone Łukasz Kałużny & Szymon Warda | Szablon stworzony z
-                    <i class="icon-heart-o" aria-hidden="true"></i> przez <a href="https://colorlib.com"
+                    <i class="far fa-heart" aria-hidden="true"></i> przez <a href="https://colorlib.com"
                         target="_blank">Colorlib</a>
                 </p>
             </div>
