--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <div class="site-mobile-menu">
     <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
-            <span class="icon-close2 js-menu-toggle"></span>
+            <span class="fas fa-times js-menu-toggle"></span>
         </div>
     </div>
     <div class="site-mobile-menu-body"></div>
@@ -19,7 +19,7 @@
             <div class="col-9">
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
                     <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
-                            class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
+                            class="site-menu-toggle js-menu-toggle text-white"><i class="fas fa-bars h3"></i></span></a>
                     </div>
                     <ul class="site-menu js-clone-nav d-none">
                         {% for item in site.menu %}
