--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,8 +210,7 @@ a {
           right: 0;
           -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-          font-family: 'icomoon'; }
+          transform: translateY(-50%); }
       .site-navbar .site-navigation .site-menu .has-children .dropdown {
         visibility: hidden;
         opacity: 0;
@@ -380,7 +379,6 @@ a {
       .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
         font-size: 12px;
         z-index: 20;
-        font-family: "icomoon";
         content: "\f078";
         position: absolute;
         top: 50%;
