--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,8 +70,7 @@
   <meta name="description" content="{{ page.description }}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-  <link rel="stylesheet" href="/assets/fonts/icomoon/style.css">
+  <script src="https://kit.fontawesome.com/702fdb20b2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/css/jquery-ui.css">
   <link rel="stylesheet" href="/assets/css/aos.css">
