fix menu bar size

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -19,7 +19,7 @@
             <div class="col-9">
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
                     <div class="d-inline-block ml-md-0 mr-auto py-3"><a href="#"
-                            class="site-menu-toggle js-menu-toggle text-white"><i class="fas fa-bars"></i></span></a>
+                            class="site-menu-toggle js-menu-toggle text-white"><i class="fas fa-bars fa-lg"></i></span></a>
                     </div>
                     <ul class="site-menu js-clone-nav d-none">
                         {% for item in site.menu %}
