--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,9 +33,9 @@
   {% if page.img contains '.' %}
   <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}" property="og:image">
   {% else %}
-  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-Facebook" property="og:image">
-  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-LinkedIn" property="og:image">
-  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-Twitter" property="og:image">
+  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-Facebook.png" property="og:image">
+  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-LinkedIn.png" property="og:image">
+  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}-Twitter.png" property="og:image">
   {% endif %}
   {% else %}
   <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.author-img }}" property="og:image">
