twitter card summary_large_image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,7 +51,7 @@
   {% endfor %}
   {% endif %}
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@{{ site.site-twitter }}">
   {% if page.title %}
   <meta name="twitter:title" content="{{ page.title }}">
