--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
                         <div>
                             {% if site.social-facebook %}
                             <a href="{{ site.social-facebook }}" class="pl-0 pr-3"><i
-                                    class="fab fa-facebook-f"></i></span></a>
+                                    class="fab fa-facebook-f"></i></a>
                             {% endif %}
                             {% if site.social-twitter %}
                             <a href="https://twitter.com/{{ site.social-twitter }}" class="pl-3 pr-3"><i
@@ -57,7 +57,7 @@
                             {% endif %}
                             {% if site.social-linkedin %}
                             <a href="{{ site.social-linkedin }}" class="pl-3 pr-3"><i
-                                    class="fab fa-linkedin-in"></i></span></a>
+                                    class="fab fa-linkedin-in"></i></a>
                             {% endif %}
                         </div>
                     </div>
