--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,6 +11,7 @@
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
         <p>Meetup patoarchitekci.io z okazji 50 odcinka podcastu😎</p>
         <p>👉<a style="color: #fff; text-decoration: underline;" href="https://pato50.konfeo.com/pl/groups">Rejestracja tutaj</a>👈</p>
+        <p>Tylko do 15:00 do 3 listopada‼️</p>
     </div>
     <div class="container">
         <div class="row align-items-center">
