--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,8 +70,8 @@
                         dostęp do dodatkowych materiałów!</p>
                     <form action="#" method="post">
                         <div class="input-group mb-3">
-                            <button class="btn btn-primary" type="button" id="button-addon2"
-                                onclick="ml_account('webforms', '1767260', 'h9i8j2', 'show')">Zapisz się!</button>
+                            <button class="btn btn-primary ml-onclick-form" type="button" id="button-addon2"
+                                onclick="ml('show', 'p7OqPn', true)">Zapisz się!</button>
                         </div>
                     </form>
                 </div>
