--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,3 +1,4 @@
+{% if page.spreaker %}
 <section class="comment-area">
   <div class="comment-wrapper">
     {% if site.discus-identifier %}
@@ -14,3 +15,4 @@
     {% endif %}
   </div>
 </section> <!-- End Comment Area -->
+{% endif %}
