--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,73 +7,79 @@
     <div class="site-mobile-menu-body"></div>
 </div>
 
-    <header class="site-navbar py-4 absolute transparent" role="banner">
-    <!--<header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
-    <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-        <p>Sprawdź Pato szkolenia z Kubernetes prowadzone przez Łukasza😎👇</p>
-        <p>1️⃣ <a style="color: #fff; text-decoration: underline;" href="https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023">13.06.2023 - Szkolenie Azure Kubernetes Service (AKS) Masterclass</a></p>
-        <p>2️⃣ <a style="color: #fff; text-decoration: underline;" href="https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023">14.06.2023 - Szkolenie Kubernetes the Hard Way</a></p>
-    </div> -->
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-3">
-                {% if page.url == "/index.html" %}
-                <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
-                {% else %}
-                <h2><a href="/" class="text-white h2">Patoarchitekci</a></h2>
-                {% endif %}
-            </div>
-            <div class="col-9">
-                <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
-                    <div class="d-inline-block ml-md-0 mr-auto py-3">
-                        <a href="#" class="site-menu-toggle js-menu-toggle text-white">
-                            <i class="fas fa-bars fa-lg">
-                            </i>
-                        </a>
-                    </div>
-                    <ul class="site-menu js-clone-nav d-none">
-                        {% for item in site.menu %}
-                        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
-                        {% endfor %}
-                        <li>
-                            {% if site.social-facebook %}
-                            <a href="{{ site.social-facebook }}" style="display: inline-block;">
-                                <i class="fab fa-facebook-f"></i></a>
-                            {% endif %}
-                            {% if site.social-twitter %}
-                            <a href="https://twitter.com/{{ site.social-twitter }}" style="display: inline-block;">
-                                <i class="fab fa-twitter"></i></a>
-                            {% endif %}
-                            {% if site.social-github %}
-                            <a href="https://github.com/{{ site.social-github }}" style="display: inline-block;">
-                                <i class="fab fa-github"></i></a>
-                            {% endif %}
-                            {% if site.social-linkedin %}
-                            <a href="{{ site.social-linkedin }}">
-                                <i class="fab fa-linkedin-in"></i></a>
-                            {% endif %}
-                        </li>
-                        <li><a href="https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?l=pl"><img
-                                    src="/assets/images/podcast-apple.svg" width="100%"
-                                    alt="Słuchaj podcastu w Apple Podcast!"></a></li>
-                        <li><a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"><img
-                                    src="/assets/images/podcast-spotify.png" width="100%"
-                                    alt="Słuchaj podcastu w Spotify!"></a></li>
-                        <li><a
-                                href="
+<header class="site-navbar py-4 absolute transparent" role="banner">
+    <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
+        <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
+            <p>Sprawdź całą ofertę Patoszkoleń na 2024 rok 👇</p>
+            <p>
+                💣💣💣 <a href="/szkolenia/" style="color: #fff; text-decoration: underline;">Pato szkolenia</a> 💣💣💣
+            </p>
+            <p>Dwa najblisze to: <a style="color: #fff; text-decoration: underline;"
+                    href="https://easl.ink/Ktyht">[04.06.2024] Architektura 101</a> i <a
+                    style="color: #fff; text-decoration: underline;" href="https://easl.ink/ZVd3f">[18.06.2024]
+                    Observability</a>
+            </p>
+        </div>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-3">
+                    {% if page.url == "/index.html" %}
+                    <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
+                    {% else %}
+                    <h2><a href="/" class="text-white h2">Patoarchitekci</a></h2>
+                    {% endif %}
+                </div>
+                <div class="col-9">
+                    <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
+                        <div class="d-inline-block ml-md-0 mr-auto py-3">
+                            <a href="#" class="site-menu-toggle js-menu-toggle text-white">
+                                <i class="fas fa-bars fa-lg">
+                                </i>
+                            </a>
+                        </div>
+                        <ul class="site-menu js-clone-nav d-none">
+                            {% for item in site.menu %}
+                            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                            {% endfor %}
+                            <li>
+                                {% if site.social-facebook %}
+                                <a href="{{ site.social-facebook }}" style="display: inline-block;">
+                                    <i class="fab fa-facebook-f"></i></a>
+                                {% endif %}
+                                {% if site.social-twitter %}
+                                <a href="https://twitter.com/{{ site.social-twitter }}" style="display: inline-block;">
+                                    <i class="fab fa-twitter"></i></a>
+                                {% endif %}
+                                {% if site.social-github %}
+                                <a href="https://github.com/{{ site.social-github }}" style="display: inline-block;">
+                                    <i class="fab fa-github"></i></a>
+                                {% endif %}
+                                {% if site.social-linkedin %}
+                                <a href="{{ site.social-linkedin }}">
+                                    <i class="fab fa-linkedin-in"></i></a>
+                                {% endif %}
+                            </li>
+                            <li><a href="https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?l=pl"><img
+                                        src="/assets/images/podcast-apple.svg" width="100%"
+                                        alt="Słuchaj podcastu w Apple Podcast!"></a></li>
+                            <li><a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"><img
+                                        src="/assets/images/podcast-spotify.png" width="100%"
+                                        alt="Słuchaj podcastu w Spotify!"></a></li>
+                            <li><a
+                                    href="
                                     https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz"><img
-                                    src="/assets/images/podcast-google.svg" width="100%"
-                                    alt="Słuchaj podcastu w Google Podcast!"></a></li>
-                        <li><a
-                                href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
-                                    src="/assets/images/podcast-youtube.png" width="100%"
-                                    alt="Słuchaj podcastu w YouTube!"></a></li>
-                        <li><a href="https://www.spreaker.com/show/4215515/episodes/feed"><img
-                                    src="/assets/images/podcast-rss.png" width="100%"
-                                    alt="Słuchaj podcastu przez ulubioną aplikację!"></a></li>
-                    </ul>
-                </nav>
+                                        src="/assets/images/podcast-google.svg" width="100%"
+                                        alt="Słuchaj podcastu w Google Podcast!"></a></li>
+                            <li><a
+                                    href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
+                                        src="/assets/images/podcast-youtube.png" width="100%"
+                                        alt="Słuchaj podcastu w YouTube!"></a></li>
+                            <li><a href="https://www.spreaker.com/show/4215515/episodes/feed"><img
+                                        src="/assets/images/podcast-rss.png" width="100%"
+                                        alt="Słuchaj podcastu przez ulubioną aplikację!"></a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
