--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@ layout: default
   </div>
 </div>
 <div class="container site-section">
+  {% if page.spreaker %}
   <div class="player mb-5">
     <a class="spreaker-player" href="https://www.spreaker.com/episode/{{ page.spreaker }}"
       data-resource="episode_id={{ page.spreaker }}" data-width="100%" data-height="150px" data-theme="light"
@@ -24,6 +25,7 @@ layout: default
       data-hide-comments="false" data-hide-sharing="false" data-hide-download="true">Posłuchaj <b>"{{post.title}}"</b>
       na Spreaker</a>
   </div>
+  {% endif %}
   <div class="row justify-content-center">
     <div class="col-md-7">
       {{content | markdownify}}
