Fix GTM + easycookie

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,11 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{page.title}} - {{site.title}}{% else %}{{site.title}}{% endif %}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://app.easy.tools">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
   <link rel="icon" href="/favicon.png">
+  <script src="https://app.easy.tools/cookies/scripts/ed9244c3a950479fa8658838fa15d425.js" type="text/javascript"></script>
   <meta content="{{ site.title }}" property="og:site_name">
   {% if page.title %}
   <meta content="{{ page.title }}" property="og:title">
