--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -15,8 +15,7 @@
         <p>
             💣💣💣 <a href="/szkolenia/" style="color: #fff; text-decoration: underline;">Pato szkolenia</a> 💣💣💣
         </p>
-        <p>Dwa najblisze to: <a style="color: #fff; text-decoration: underline;"
-                href="https://easl.ink/Ktyht">[04.06.2024] Architektura 101</a> i <a
+        <p>Najblisze to: <a
                 style="color: #fff; text-decoration: underline;" href="https://easl.ink/ZVd3f">[18.06.2024]
                 Observability</a>
         </p>
