--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,7 +65,7 @@
             </div>
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="mb-5">
-                    <h3 class="footer-heading mb-2">Bądź na bieżąco!</h3>
+                    <h3 class="footer-heading mb-2" id="newsletter">Bądź na bieżąco!</h3>
                     <p>Zapisz się do newslettera Patoarchiteków i bądź na bieżąco z wszystkimi odcinkami oraz uzyskaj
                         dostęp do dodatkowych materiałów!</p>
                     <form action="#" method="post">
