--- a/_includes/head.html
+++ b/_includes/head.html
@@ -136,4 +136,5 @@
       }
     });
   </script>
+  <script> window.addEventListener("message", (e) => { !!e.data.frameHeight && e.data.wallUuid === "patoszkolenia" && (document.getElementById("patoszkolenia").style.height = e.data.frameHeight); });</script>
 </head>
