--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,10 +11,10 @@
 {% if page.cta != false %}
 <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-        <p>Szybkie szkolenie z Łukaszem dla community <a href="https://discord.gg/tcuHtnBede" style="color: #fff; text-decoration: underline;">Order of Devs</a>👇</p>
+        <p>Sprawdź najbliższe Patoszkolenie👇</p>
         <p>
-            💣💣💣 <a href="https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher"
-                style="color: #fff; text-decoration: underline;">[28.08.2024] Szkolenie RKE2 i Rancher</a> 💣💣💣
+            💣💣💣 <a href="https://app.easycart.pl/checkout/patoarchitekci/azure-container-apps-masterclass"
+                style="color: #fff; text-decoration: underline;">[24-25.09.2024] Azure Container Apps Masterclass</a> 💣💣💣
         </p>
     </div>
     {% else %}
