--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,8 +13,8 @@
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
         <p>Sprawdź najbliższe Patoszkolenie👇</p>
         <p>
-            💣💣💣 <a href="https://app.easycart.pl/checkout/patoarchitekci/azure-container-apps-masterclass"
-                style="color: #fff; text-decoration: underline;">[24-25.09.2024] Azure Container Apps Masterclass</a> 💣💣💣
+            💣💣💣 <a href="https://app.easycart.pl/checkout/patoarchitekci/modelowanie-danych"
+                style="color: #fff; text-decoration: underline;">[15.10.2024] Modelowanie Danych</a> 💣💣💣
         </p>
     </div>
     {% else %}
